force-app/main/default/objects/Collection_Operation_Availability__c/Collection_Operation_Availability__c.object-meta.xml
<CustomObject>
    <description>Junction object between Collection Operation and Availability Pattern</description>
    <label>Collection Operation Availability</label>
    <nameField>
        <label>CO AP Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Collection Operation Availabilities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>