force-app/main/default/objects/Collection_Operation_Availability__c/fields/Availability_Pattern__c.field-meta.xml
<CustomField>
    <fullName>Availability_Pattern__c</fullName>
    <description>Created as part of HRP-1522</description>
    <label>Availability Pattern</label>
    <referenceTo>sked__Availability_Pattern__c</referenceTo>
    <relationshipLabel>Collection Operation Availabilities</relationshipLabel>
    <relationshipName>Collection_Operation_Availabilities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>