force-app/main/default/objects/Collection_Operation_Availability__c/fields/Collection_Operation__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation__c</fullName>
    <description>Created as part of HRP-1522</description>
    <label>Collection Operation</label>
    <referenceTo>Biomed_Collection_Op_Center__c</referenceTo>
    <relationshipLabel>Collection Operation Availabilities</relationshipLabel>
    <relationshipName>Collection_Operation_Availabilities</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>