force-app/main/default/objects/Collection_Operation_Availability__c/fields/Effective_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_End_Date__c</fullName>
    <description>Created as part of HRP-1522</description>
    <label>Effective End Date</label>
    <type>Date</type>
</CustomField>