force-app/main/default/objects/Collection_Operation_Availability__c/fields/Min_Nbr_of_Staff__c.field-meta.xml
<CustomField>
    <fullName>Min_Nbr_of_Staff__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Created as part of HRP-1522</description>
    <label>Min Nbr of Staff</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>