force-app/main/default/objects/Collection_Operation_Availability__c/fields/Total_Actual_Resources__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Resources__c</fullName>
    <description>Created as part of HRP-1522</description>
    <label>Total Actual Resources (AP)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>