force-app/main/default/objects/Collection_Operation_Availability__c/fields/Total_Actual_Resources_Mobile__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Resources_Mobile__c</fullName>
    <description>Created as part of HRP-16916</description>
    <label>Total Actual Resources (AP) - Mobile</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>