force-app/main/default/objects/Collection_Operation_Availability__c/fields/Total_Target_Fixed_Site__c.field-meta.xml
<CustomField>
    <fullName>Total_Target_Fixed_Site__c</fullName>
    <description>Created as part of HRP-16916</description>
    <label>Total Target (AP) - Fixed Site</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>