force-app/main/default/objects/Collection_Operation_Availability__c/validationRules/CO_AP_Name_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>CO_AP_Name_Validation</fullName>
    <active>true</active>
    <description>CO AP Name should be concentration of CO Name, Space, AP Name</description>
    <errorConditionFormula>Name  &lt;&gt;  Collection_Operation__r.Name  + &#39; &#39;  +  Availability_Pattern__r.Name</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>Name should be concentration of CO Name, Space, AP Name</errorMessage>
</ValidationRule>