force-app/main/default/objects/Collection_Operation_Availability__c/validationRules/Total_Actual_Resources_Change_SysAdmin.validationRule-meta.xml
<ValidationRule>
    <fullName>Total_Actual_Resources_Change_SysAdmin</fullName>
    <active>true</active>
    <description>Only system admin can change total actual resources</description>
    <errorConditionFormula>AND(
NOT($User.FirstName &amp; &apos; &apos; &amp; $User.LastName = &apos;Automated Process&apos;),
NOT($Profile.Name  = &apos;System Administrator&apos;),
OR( 
AND( 
ISNEW(), 
NOT(ISBLANK(Total_Actual_Resources__c))
),
ISCHANGED( Total_Actual_Resources__c ) 
)
)</errorConditionFormula>
    <errorDisplayField>Total_Actual_Resources__c</errorDisplayField>
    <errorMessage>Only System Admins are allowed to modify this field</errorMessage>
</ValidationRule>